--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "4.8.0"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "1.5.0",
