--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "template-vite-react-ts-tailwind-v3",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "puppeteer": "19.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0"
