refactor: migrated scraper to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["./src", "scraper/spotify.js"]
+  "include": ["./src", "scraper/spotify.ts"]
 }
