--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "puppeteer": "19.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.8.0"
+    "react-icons": "4.8.0",
+    "vite-node": "0.29.7"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "1.5.0",
